--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* ==================== BOOTSTRAP ICONS ======================== */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 /* ==================== GOOGLE FONTS ======================== */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
 
