--- a/src/index.css
+++ b/src/index.css
@@ -362,3 +362,43 @@ img {
     display: flex;
     gap: .5rem;
 }
+
+/*==================== ABOUT ====================*/
+.about__img {
+    width: 200px;
+    border-radius: 0.5rem;
+    justify-self: center;
+    align-self: center;
+  }
+  
+  .about__description {
+    text-align: center;
+    margin-bottom: var(--m-2-5);
+  }
+  
+  .about__info {
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: var(--m-2-5);
+  }
+  
+  .about__info-title {
+    font-size: var(--h2-font-size);
+    font-weight: var(--font-semi-bold);
+    color: var(--title-color);
+  }
+  
+  .about__info-name {
+    font-size: var(--smaller-font-size);
+  }
+  
+  .about__info-title,
+  .about__info-name {
+    display: block;
+    text-align: center;
+  }
+  
+  .about__buttons {
+    display: flex;
+    justify-content: center;
+  }
