--- a/src/index.css
+++ b/src/index.css
@@ -534,3 +534,31 @@ img {
 .skills__open .skills__arrow {
     transform: rotate(-180deg);
 }
+
+/*==================== SKILLS ====================*/
+.portfolio__container {
+    overflow: initial;
+}
+
+.portfolio__content {
+    padding: 0 1.5rem;
+}
+
+.portfolio__img {
+    width: 265px;
+    border-radius: 0.5rem;
+    justify-self: center;
+}
+
+.portfolio__title {
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--m-0-5);
+}
+
+.portfolio__description {
+    margin-bottom: var(--m-0-75);
+}
+
+.portfolio__button:hover .button__icon {
+    transform: translateX(0.25rem);
+}
