--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,13 @@ img {
     margin-right: var(--m-1-5);
 }
 
+@media (min-width: 768px) {
+    .container {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 .section {
     padding: 2rem 0 4rem;
 }
@@ -172,53 +179,62 @@ img {
     background-color: var(--body-color);
 }
 
+@media (min-width: 768px) {
+    .header {
+        top: 0;
+        bottom: initial;
+        padding: 0 1rem;
+    }
+}
+
 .button {
+    text-transform: uppercase;
+    position: relative;
     display: inline-block;
-    background-color: var(--first-color);
-    color: #fff;
     padding: 1rem;
-    border-radius: 0.5rem;
     font-weight: var(--font-medium);
+    color: var(--title-color);
 }
 
-.button:hover {
-    background-color: var(--first-color-alt);
+.button__primary {
+    border: 2px solid var(--first-color);
 }
 
-.button__icon {
-    font-size: 1.25rem;
-    margin-left: var(--m-0-5);
-    transition: 0.3s;
+.button__secundary {
+    border: 2px solid var(--title-color);
 }
 
-.button--white {
-    background-color: #fff;
-    color: var(--first-color);
+.button::after {
+    border-radius: 5px;
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    transition-duration: .3s;
+
 }
 
-.button--white:hover {
-    background-color: rgba(250, 250, 250, 0.9);
+.button__primary::after {
+    background-color: hsla(var(--main-color), 69%, 61%, 0.5);
+}
+
+.button__secundary::after {
+    background-color: rgba(240,240,240,0.5);
+}
+
+.button:hover::after {
+    left: 0;
+    top: 0;
 }
 
 .button--flex {
     display: inline-flex;
-    align-items: center;
+    column-gap: 1rem;
 }
 
-.button--small {
-    padding: 0.75rem 1rem;
-}
 
-.button--link {
-    padding: 0;
-    background-color: transparent;
-    color: var(--first-color);
-}
-
-.button--link:hover {
-    background-color: transparent;
-    color: var(--first-color-alt);
-}
 
 /*==================== NAV ====================*/
 .nav {
@@ -230,10 +246,23 @@ img {
     padding: var(--m-1);
 }
 
+@media (min-width: 768px) {
+    .nav {
+        height: calc(var(--header-height) + 1.5rem);
+        column-gap: 1rem;
+    }
+}
+
 .nav__logo,
 .nav__toggle {
     color: var(--title-color);
     font-weight: var(--font-regular);
+}
+
+@media (min-width: 768px) {
+    .nav__logo {
+        font-size: var(--h2-font-size);
+    }
 }
 
 .nav__logo:hover {
@@ -245,11 +274,17 @@ img {
     cursor: pointer;
 }
 
+@media (min-width: 768px) {
+    .nav__toggle {
+        display: none;
+    }
+}
+
 .nav__toggle:hover {
     color: var(--first-color);
 }
 
-@media screen and (max-width: 767px) {
+@media (max-width: 767px) {
     .nav__menu {
         position: fixed;
         bottom: -100%;
@@ -268,21 +303,46 @@ img {
     gap: 2rem;
 }
 
+@media (min-width: 768px) {
+    .nav__list {
+        display: flex;
+        column-gap: 2rem;
+    }
+}
+
 .nav__link {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: var(--small-font-size);
-    color: var(--title-color);
+    color: var(--first-color);
     font-weight: var(--font-regular);
 }
 
 .nav__link:hover {
-    color: var(--first-color);
+    color: var(--first-color-alt);
+}
+
+
+
+@media (min-width: 768px) {
+    .nav__link {
+        font-size: var(--normal-font-size);
+    }
+
+    .nav__link:hover {
+        color: var(--title-color);
+    }
 }
 
 .nav__icon {
     font-size: 1.2rem;
+}
+
+@media (min-width: 768px) {
+    .nav__icon {
+        display: none;
+    }
 }
 
 .nav__close {
@@ -296,6 +356,12 @@ img {
 
 .nav__close:hover {
     color: var(--first-color-alt);
+}
+
+@media (min-width: 768px) {
+    .nav__close {
+        display: none;
+    }
 }
 
 .nav__btns {
@@ -332,20 +398,29 @@ img {
 
 /*==================== HOME ====================*/
 .home__container {
+    gap: 1rem;
+}
+
+.home__content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
 }
 
 @media (min-width: 767px) {
-    .home__container {
-        flex-direction: row;
+    .home__content {
+        flex-direction: row-reverse;
+        column-gap: 2rem;
+        padding-top: 3.5rem;
     }
 }
 
 .home__img {
     max-width: 200px;
+}
+
+.home__data {
+    padding-top: 1rem;
 }
 
 .home__title {
@@ -356,11 +431,16 @@ img {
     font-size: var(--h3-font-size);
     color: var(--text-color);
     font-weight: var(--font-regular);
+    margin-bottom: var(--m-0-75);
+}
+
+.home__description {
+    margin-bottom: var(--m-2);
 }
 
 .home__buttons {
     display: flex;
-    gap: .5rem;
+    column-gap: 1rem;
 }
 
 /*==================== ABOUT ====================*/
@@ -409,6 +489,12 @@ img {
     row-gap: 0;
 }
 
+@media (min-width: 768px) {
+    .skills__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
 .skills__header {
     display: flex;
     align-items: center;
@@ -455,6 +541,12 @@ img {
     display: flex;
     justify-content: space-between;
     margin-bottom: var(--mb-0-5);
+}
+
+@media (min-width: 350px) {
+    .skills__title {
+        font-size: var(--normal-font-size);
+    }
 }
 
 .skills__name {
@@ -535,9 +627,15 @@ img {
     transform: rotate(-180deg);
 }
 
-/*==================== SKILLS ====================*/
+/*==================== ABOUT ====================*/
 .portfolio__container {
     overflow: initial;
+}
+
+@media (min-width: 768px) {
+    .portfolio__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .portfolio__content {
@@ -545,7 +643,6 @@ img {
 }
 
 .portfolio__img {
-    width: 265px;
     border-radius: 0.5rem;
     justify-self: center;
 }
@@ -559,14 +656,15 @@ img {
     margin-bottom: var(--m-0-75);
 }
 
-.portfolio__button:hover .button__icon {
-    transform: translateX(0.25rem);
-}
-
-
 /*==================== SKILLS ====================*/
 .contact__container {
     row-gap: 3rem;
+}
+
+@media (min-width: 768px) {
+    .contact__container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 .contact__information {
@@ -623,6 +721,12 @@ img {
     row-gap: 3.5rem;
 }
 
+@media (min-width: 768px) {
+    .footer__container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
 .footer__bg {
     background-color: var(--first-color-second);
     padding: 2rem 0 3rem;
@@ -656,11 +760,17 @@ img {
     color: var(--first-color-lighter);
 }
 
+@media (min-width: 768px) {
+    .footer__social {
+        justify-self: flex-end;
+    }
+}
+
 .footer__copy {
     font-size: var(--small-font-size);
     text-align: center;
-    color: var(--text-color-light);
     margin-top: var(--m-3);
+    color: #fff;
 }
 
 .footer__title,
